objects/Non_contributory_Period__c.object
<CustomObject>
    <fields>
        <fullName>Active_Clean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Clean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>AND(Start__c &lt;= Today(), End__c &gt;= Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>Ende</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Beitragsfreie_Zeit_ID__c</fullName>
        <label>Old Beitragsfreie Zeit ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Beitragsfreie Zeiten</relationshipLabel>
        <relationshipName>Non_contributory_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Beitragsfreie Zeit</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beitragsfreie Zeiten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>X1st_Of_Month</fullName>
        <active>false</active>
        <errorConditionFormula>OR(NOT(DAY(Start__c) = 1),NOT(DAY(End__c) = 1))</errorConditionFormula>
        <errorMessage>Ungültige Datumsangabe. Es muss der Monatserste gewählt werden.</errorMessage>
    </validationRules>
</CustomObject>